rearrange buttons and force refresh the text display after loading the font

--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta charset="UTF-8">
-</head>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<meta charset="UTF-8">
+	</head>
 	<body>
-		<button class="btn" id="start">start</button><br>
-		<button class="btn" id="pause">pause</button><br>
-		<button class="btn" id="reset">reset</button><br>
+		<button class="btn" id="start">Start</button>
+		<button class="btn" id="pause">Pause</button>
+		<button class="btn" id="reset">Reset</button>
 		<div class="container">
-			<canvas id="cnv"></canvas>
+		  <canvas id="cnv"></canvas>
 
-			<div class="ctrl-panel">
-				<div class="rest-ctrl center-pos">
-					rest
-					<br>
-					<span class="clickable" id="rest-down"> - </span>
-					 <span id="rest-mn" class="num">5</span> 
-					<span class="clickable" id="rest-up"> + </span>
-				</div>
-				<div class="work-ctrl center-pos">
-					work
-					<br>
-					<span class="clickable" id="work-down" > - </span>
-					 <span id="work-mn" class="num">25</span> 
-					<span class="clickable" id="work-up"> + </span>				
-				</div>
-			</div>
+		  <div class="ctrl-panel">
+		    <div class="rest-ctrl center-pos">
+		      rest
+		      <br>
+		      <span class="clickable" id="rest-down"> - </span>
+		      <span id="rest-mn" class="num">5</span> 
+		      <span class="clickable" id="rest-up"> + </span>
+		    </div>
+		    <div class="work-ctrl center-pos">
+		      work
+		      <br>
+		      <span class="clickable" id="work-down" > - </span>
+		      <span id="work-mn" class="num">25</span> 
+		      <span class="clickable" id="work-up"> + </span>				
+		    </div>
+		  </div>
 
 		</div>
 	
