--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<button class="btn" id="start">Start</button>
 		<button class="btn" id="pause">Pause</button>
 		<button class="btn" id="reset">Reset</button>
+		<a href="../calculator/index.html"><button class="btn" id="calculator">Calculator</button></a>
 		<div class="container">
 		  <canvas id="cnv"></canvas>
 
