make the app responsive

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 	<head>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, maximum-scale=1">
+
 	</head>
-	<body>
+	<body oncontextmenu="return false" class="unselectable">
 		<button class="btn" id="start">Start</button>
 		<button class="btn" id="pause">Pause</button>
 		<button class="btn" id="reset">Reset</button>
-		<a href="../calculator/index.html"><button class="btn" id="calculator">Calculator</button></a>
 		<div class="container">
 		  <canvas id="cnv"></canvas>
 
