update buttons layout

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body oncontextmenu="return false" class="unselectable">
-    <button class="btn" id="start">Start</button>
-    <button class="btn" id="pause">Pause</button>
-    <button class="btn" id="reset">Reset</button>
+    <div class="center">
+	    <button class="btn" id="start">Start</button>
+	    <button class="btn" id="pause">Pause</button>
+	    <button class="btn" id="reset">Reset</button>
+	</div>
     <div class="container">
         <canvas id="cnv"></canvas>
         <div class="ctrl-panel">
