--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 </head>
 
 <body oncontextmenu="return false" class="unselectable">
-    <div class="center">
-        <button class="btn" id="start">Start</button>
-        <button class="btn" id="pause">Pause</button>
-        <button class="btn" id="reset">Reset</button>
-    </div>
     <div class="container">
         <canvas id="cnv"></canvas>
         <div class="ctrl-panel">
@@ -32,6 +27,12 @@
                 <span class="clickable" id="work-up"> + </span>
             </div>
         </div>
+    </div>
+    
+    <div class="center">
+        <div class="btn" id="start">Start</div>
+        <div class="btn" id="pause">Pause</div>
+        <div class="btn" id="reset">Reset</div>
     </div>
     <script type="text/javascript" src="script.js"></script>
 </body>
