add meta tags / improve responsiveness

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, maximum-scale=1">
+    <meta name="author" contant="Abdel Halim Bouguedra">
+    <meta name="viewport" content="width=device-width maximum-scale='1'">
 </head>
 
 <body oncontextmenu="return false" class="unselectable">
