--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta charset="UTF-8">
         <meta name="author" contant="Abdel Halim Bouguedra">
         <meta name="viewport" content="width=device-width maximum-scale='1'">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        
     </head>
 
     <body oncontextmenu="return false" class="unselectable">
